# SVMVoiceControlApp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Train.i  main.cpp  memorymanager.cpp  memorymanager.hpp  train.cpp  train.hpp  types.hpp
JDlib/: site_selyerobotics_jdlib_JDlib.cpp  site_selyerobotics_jdlib_JDlib.h  site_selyerobotics_jdlib_JDlib_DecisionFunction.cpp  site_selyerobotics_jdlib_JDlib_DecisionFunction.h  site_selyerobotics_jdlib_JDlib_LearnedFunction.cpp  site_selyerobotics_jdlib_JDlib_LearnedFunction.h  site_selyerobotics_jdlib_JDlib_Matrix.cpp  site_selyerobotics_jdlib_JDlib_Matrix.h  site_selyerobotics_jdlib_JDlib_Matrix_Matrix12.cpp  site_selyerobotics_jdlib_JDlib_Matrix_Matrix12.h  site_selyerobotics_jdlib_JDlib_NormalizedProbabilisticFunction.cpp  site_selyerobotics_jdlib_JDlib_NormalizedProbabilisticFunction.h  site_selyerobotics_jdlib_JDlib_ProbabilisticDecisionFunction.cpp  site_selyerobotics_jdlib_JDlib_ProbabilisticDecisionFunction.h  site_selyerobotics_jdlib_JDlib_RBF.cpp  site_selyerobotics_jdlib_JDlib_RBF.h  site_selyerobotics_jdlib_JDlib_ReducedDecisionFunctionTrainer2.cpp  site_selyerobotics_jdlib_JDlib_ReducedDecisionFunctionTrainer2.h  site_selyerobotics_jdlib_JDlib_SVMNuTrainer.cpp  site_selyerobotics_jdlib_JDlib_SVMNuTrainer.h  site_selyerobotics_jdlib_JDlib_VectorM.cpp  site_selyerobotics_jdlib_JDlib_VectorM.h  site_selyerobotics_jdlib_JDlib_VectorNormalizer.cpp  site_selyerobotics_jdlib_JDlib_VectorNormalizer.h  site_selyerobotics_jdlib_JDlib_Vectord.cpp  site_selyerobotics_jdlib_JDlib_Vectord.h  types.hpp
jsvm/: pom.xml
jsvm/src/main/java/site/kalocsanyi/: DiscreteFourier.java  DiscreteFourierTransform.java  MainActivity.java  SVMModel.java
jsvm/src/main/java/site/selyerobotics/jdlib/: JDlib.java
jsvm/src/main/java/site/selyerobotics/jsvm/: App.java
jsvm/src/test/java/site/selyerobotics/jsvm/: AppTest.java
